# pjdemo

./: .gitignore  README.md  incoming.c  main.cpp  rtp.c
pa/: pa_dev_to_file.cpp  pa_to_in_dev.cpp  pa_wav_to_dev.cpp
voip/: CMakeLists.txt  main.cc  vaccount.cc  vaccount.h  vaudiomediaport.cc  vaudiomediaport.h  vcall.cc  vcall.h  vmedia.h  voip.cc  voip.cpp
voip/.cache/clangd/index/: main.cc.1492017C37485A2E.idx  main.cc.22D5EEB3F814EA6A.idx  offical.cc.E0B79DE1929EF914.idx  test.cc.DA319FA1ED8877D7.idx  test1.cc.BCC7142FAB3F08ED.idx  test_audiomediaport.cc.77D5B5CA8E9D731E.idx  vaccount.cc.EBABE054B753AE61.idx  vaccount.h.2D004EECA8B03341.idx  vaudiomediaport.cc.4FFC5548D49C0E53.idx  vaudiomediaport.h.D7D0964EC3F6F0BC.idx  vcall.cc.2A6CFFAA2B7CE9D3.idx  vcall.h.14E068D141244B50.idx  voip.cc.83385F1E348BF435.idx  voip.cpp.DEFBA34D2D4650D3.idx
voip/funasr/: main.py
voip/test/: test.cc  test2.cc  test3.cc
